manifests/miniflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app: miniflux
spec:
  selector:
    app: miniflux
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux-postgres
  namespace: miniflux
  labels:
    app: miniflux-postgres
spec:
  selector:
    app: miniflux-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
